@@ -12,6 +12,7 @@
  + AlpineQuest handles tiles <> 256px and ellipsoid projections
  + New atlas format: Run.GPS Atlas
  ! Fixed map source: Emapi.pl
+ + New map source: New Zealand Topographic Maps
 
  1.8 beta 4: (2010-10-09)
  ~ Implemented logging for ImageWriter warnings
